# python.mosquitto-bws2passwd

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
src/bws2passwd/: bitwarden.py  cli.py  passwd.py
tests/: test_cli.py  test_passwd.py
