[project]
name = "bws2passwd"
version = "0.1.0"
description = "Init container to generate a Mosquitto password file from Bitwarden Secrets Manager"
requires-python = ">=3.11"
dependencies = [
    "bitwarden-sdk>=2.0.0",
]

[project.scripts]
bws2passwd = "bws2passwd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bws2passwd"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
